@@ -1,7 +1,6 @@
 package org.zephyrsoft.hibiscuswatcher;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.kohsuke.args4j.CmdLineException;
 import org.kohsuke.args4j.CmdLineParser;
@@ -16,74 +15,47 @@ public class Starter {
 	@Option(name = "--url", required = true, metaVar = "<URL>", usage = "URL of the XML-RPC services of Hibiscus")
 	private String url = null;
 
-	@Option(name = "--username", required = false, metaVar = "<LOGIN>",
-		usage = "username to access the XML-RPC services at the given URL, defaults to 'admin'")
+	@Option(name = "--username", required = false, metaVar = "<LOGIN>", usage = "username to access the XML-RPC services at the given URL, defaults to 'admin'")
 	private String username = "admin";
 
-	@Option(name = "--password", required = true, metaVar = "<PASSWORD>",
-		usage = "password to access the XML-RPC services at the given URL")
+	@Option(name = "--password", required = true, metaVar = "<PASSWORD>", usage = "password to access the XML-RPC services at the given URL")
 	private String password = null;
 
-	@Option(
-		name = "--single",
-		required = false,
-		usage = "get all single postings of all accounts and generate the more detailed postings report (which also contains the balances)")
+	@Option(name = "--single", required = false, usage = "get all single postings of all accounts and generate the more detailed postings report (which also contains the balances)")
 	private boolean singlePostings = false;
 
-	@Option(
-		name = "--balances",
-		required = false,
-		usage = "get the balances of all accounts")
+	@Option(name = "--balances", required = false, usage = "get the balances of all accounts")
 	private boolean balances = false;
 
-	@Option(
-		name = "--low",
-		required = false,
-		usage = "check if the balance of an account is below a minimum account")
+	@Option(name = "--low", required = false, usage = "check if the balance of an account is below a minimum account")
 	private boolean lowBalance = false;
 
-	@Option(name = "--low-account",
-		required = false,
-		metaVar = "<ACCOUNT>",
-		usage = "account(s) for --low (multiple times allowed)")
+	@Option(name = "--low-account", required = false, metaVar = "<ACCOUNT>", usage = "account(s) for --low (multiple times allowed)")
 	private List<String> lowAccounts = null;
 
-	@Option(name = "--only-account",
-		required = false,
-		metaVar = "<ACCOUNT>",
-		usage = "account(s) for --balances or --single (multiple times allowed)")
+	@Option(name = "--only-account", required = false, metaVar = "<ACCOUNT>", usage = "account(s) for --balances or --single (multiple times allowed)")
 	private List<String> onlyAccounts = null;
 
-	@Option(name = "--low-minimum",
-		required = false,
-		metaVar = "<WHOLE NUMBER>",
-		usage = "minimum amount for --low")
+	@Option(name = "--low-minimum", required = false, metaVar = "<WHOLE NUMBER>", usage = "minimum amount for --low")
 	private Double lowMinimum = null;
 
-	@Option(
-		name = "--days",
-		required = false,
-		metaVar = "<DAYS>",
-		usage = "go back this amount of days for fetching the postings, e.g. 7 (the default) - this option is only effective in single postings mode!")
+	@Option(name = "--days", required = false, metaVar = "<DAYS>", usage = "go back this amount of days for fetching the postings, e.g. 7 (the default) - this option is only effective in single postings mode!")
 	private int daysToFetchInSingleMode = 7;
 
-	@Option(name = "--no-positive", required = false,
-		usage = "do not get single postings which contain a positive amount of money")
+	@Option(name = "--no-positive", required = false, usage = "do not get single postings which contain a positive amount of money")
 	private boolean noPositive = false;
 
-	@Option(name = "--no-negative", required = false,
-		usage = "do not get single postings which contain a negative amount of money")
+	@Option(name = "--no-negative", required = false, usage = "do not get single postings which contain a negative amount of money")
 	private boolean noNegative = false;
 
-	@Option(name = "--no-sum", required = false,
-		usage = "do not print a sum")
+	@Option(name = "--no-sum", required = false, usage = "do not print a sum")
 	private boolean noSum = false;
 
-	public static void main(String[] args) {
+	public static void main(final String[] args) {
 		new Starter(args);
 	}
 
-	private Starter(String[] args) {
+	private Starter(final String[] args) {
 		CmdLineParser parser = new CmdLineParser(this);
 		try {
 			parser.parseArgument(args);
@@ -102,7 +74,7 @@ public class Starter {
 				.filter(account -> onlyAccounts == null
 					|| onlyAccounts.isEmpty()
 					|| onlyAccounts.contains(account.getIban()))
-				.collect(Collectors.toList());
+				.toList();
 			// generate report and print it to stdout
 			System.out.println(Reporter.generatePostingsReport(accounts));
 		}
@@ -114,7 +86,7 @@ public class Starter {
 				.filter(account -> onlyAccounts == null
 					|| onlyAccounts.isEmpty()
 					|| onlyAccounts.contains(account.getIban()))
-				.collect(Collectors.toList());
+				.toList();
 			// generate report and print it to stdout
 			System.out.println(Reporter.generateBalancesReport(accounts, !noSum));
 		}
@@ -127,7 +99,7 @@ public class Starter {
 		}
 	}
 
-	public static void die(String message) {
+	public static void die(final String message) {
 		if (message != null) {
 			System.err.println(message);
 		}
